# aiohttp-irbis

./: .travis.yml  README.rst  pyproject.toml
.github/workflows/: ci.yml
aiohttp_irbis/: __init__.py  constants.py  decorators.py  exceptions.py  middlewares.py  typedefs.py  utils.py  views.py
docs/: conf.py  index.rst
examples/: single_decorated_function.py  single_middleware.py
tests/: conftest.py  test_aiohttp_irbis.py  test_decorators.py  test_middlewares.py  test_setup.py  test_utils.py  test_views.py
